Regression: Sculpt Brushes not supported in Multiresolution and Dyntopo Mode #97553

Closed
opened 2022-04-22 19:38:06 +02:00 by Shady Hamza · 22 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-21 22:11, hash: 179100c021
Worked: (newest version of Blender that worked as expected)
Caused by 6f190f7f43

Short description of error
Popup Error "not supported in dyntopo mode" when trying to sculpt using Dyntopo mode turned on

Exact steps for others to reproduce the error
1.Add a cube
2.Go to sculpt mode and turn on Dyntopo or add Multires modifier and subdivide at least once
3.choose first brush or any sculpt brush and try to sculpt on cube>error

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-21 22:11, hash: `179100c021` Worked: (newest version of Blender that worked as expected) Caused by 6f190f7f43 **Short description of error** Popup Error "not supported in dyntopo mode" when trying to sculpt using Dyntopo mode turned on **Exact steps for others to reproduce the error** 1.Add a cube 2.Go to sculpt mode and turn on Dyntopo or add Multires modifier and subdivide at least once 3.choose first brush or any sculpt brush and try to sculpt on cube>error
Author

Added subscriber: @Shady.Hamza

Added subscriber: @Shady.Hamza

#97661 was marked as duplicate of this issue

#97661 was marked as duplicate of this issue

#97587 was marked as duplicate of this issue

#97587 was marked as duplicate of this issue
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can confirm.
System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-22 15:03, hash: fe43c17083

I can confirm. **System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-14.0.32 355.11.11.10.10.143 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-22 15:03, hash: `fe43c17083`
Contributor

should be caused by: 6f190f7f43

should be caused by: 6f190f7f43

Added subscriber: @Voguart

Added subscriber: @Voguart

me too,
"No supported in dynamic topology mode"

System Information

Operating system: Windows 10 Professionnel, build system : 19043.1645.
Intel(R) Core(TM) i7-4790K CPU @ 4.00GHz 4.00 GHz
Graphics card: NVIDIA GeForce GTX 1080ti

Blender Version
Branch: master
Hash: 6787cc13d4
Date: 2022-04-22 21:15

Blender Version
Branch: master
Hash: c486da0238
Date: 2022-04-23 13:09

me too, "No supported in dynamic topology mode" **System Information** Operating system: Windows 10 Professionnel, build system : 19043.1645. Intel(R) Core(TM) i7-4790K CPU @ 4.00GHz 4.00 GHz Graphics card: NVIDIA GeForce GTX 1080ti **Blender Version** Branch: master Hash: 6787cc13d4ef Date: 2022-04-22 21:15 **Blender Version** Branch: master Hash: c486da0238bd Date: 2022-04-23 13:09

In #97553#1345359, @dupoxy wrote:
should be caused by: 6f190f7f43

Do you think that we are very few people to have this problem? I checked a lot of things and I still have the same problem!

> In #97553#1345359, @dupoxy wrote: > should be caused by: 6f190f7f43 Do you think that we are very few people to have this problem? I checked a lot of things and I still have the same problem!

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares

I can confirm, its broken for me too

I can confirm, its broken for me too
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Sculpt Brushes not supported in Dyntopo Mode to Sculpt Brushes not supported in Multiresolution and Dyntopo Mode 2022-04-25 05:53:55 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

In #97553#1345359, @dupoxy wrote:
should be caused by: 6f190f7f43

cc @JosephEagar

> In #97553#1345359, @dupoxy wrote: > should be caused by: 6f190f7f43 cc @JosephEagar
Member
Added subscribers: @TheRedWaxPolice, @ThinkingPolygons, @JulianPerez, @zeauro
Philipp Oeser changed title from Sculpt Brushes not supported in Multiresolution and Dyntopo Mode to Regression: Sculpt Brushes not supported in Multiresolution and Dyntopo Mode 2022-04-25 09:53:09 +02:00

Added subscriber: @PhlixFer

Added subscriber: @PhlixFer

This issue was referenced by 38eed4ada3

This issue was referenced by 38eed4ada363861abc6d44fee5816a2c384fea22
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-25 21:27:21 +02:00
Member

Added subscriber: @Pyer

Added subscriber: @Pyer

Added subscriber: @TioMegamanX

Added subscriber: @TioMegamanX

I am using 3.3.2 LTS, smooth brush seems broken, barely doing anything on a specific project I am working on, tried a new scene with both high resolution mesh and other with multires, it works normally.

I am using 3.3.2 LTS, smooth brush seems broken, barely doing anything on a specific project I am working on, tried a new scene with both high resolution mesh and other with multires, it works normally.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97553
No description provided.