Fix T97553: SCULPT_handles_colors_report called for non-sculpt brushes