source/blender/editors/sculpt_paint/sculpt.c
@@ -5447,8 +5447,10 @@ static int sculpt_brush_stroke_invoke(bContext *C, wmOperator *op, const wmEvent
   sculpt_brush_stroke_init(C, op);
 
   Object *ob = CTX_data_active_object(C);
+  Sculpt *sd = CTX_data_tool_settings(C)->sculpt;
+  Brush *brush = BKE_paint_brush(&sd->paint);
 
-  if (!SCULPT_handles_colors_report(ob->sculpt, op->reports)) {
+  if (SCULPT_TOOL_NEEDS_COLOR(brush->sculpt_tool) && !SCULPT_handles_colors_report(ob->sculpt, op->reports)) {
     return OPERATOR_CANCELLED;
   }
 
